--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Roya - رؤية</title>
+  <title>Alfa</title>
   <!-- <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico" /> -->
-  <link rel="shortcut icon" type="image/png" href="assets/alpha.svg" />
+  <link rel="shortcut icon" type="image/png" href="assets/alfaLogo.png" />
 
   <!-- Owl Carousel -->
 
