--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
   <link rel="stylesheet" href="css/slick-theme.css" />
   <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body class="homepage">
@@ -95,7 +96,7 @@
         <div class="container">
           <div class="content">
             <ul class="Links">
-              <li><a href="#Offers">Offers</a></li>
+              <li><a href="./Offer.html">Offers</a></li>
               <li><a href="#Offers">About</a></li>
               <li><a href="#Offers">Services</a></li>
               <li><a href="#Offers">Tests</a></li>
@@ -171,23 +172,44 @@
           </p>
           <div class="row">
             <div class="col-lg-3">
-              <div class="card"><img src="./assets/about-1.png" />
-                <h5>Home visit</h5>
+              <div class="card animate__rotateOutUpLeft">
+                <img src="./assets/about-1.png" class="img-header" />
+                <h5 class="title">Home visit</h5>
+                <div class="content-hover">
+                  <h5>Home Visit</h5>
+                  <p>Lorem ipsum dolor sit amet consecte.Lorem ipsum dolor sit amet consecte.
+                  </p><a href="/"><img src="./assets/Send.png" /></a>
+                </div>
               </div>
             </div>
             <div class="col-lg-3">
-              <div class="card"><img src="./assets/about-3.png" />
-                <h5>Medical consultation</h5>
+              <div class="card"><img src="./assets/about-3.png" class="img-header" />
+                <h5 class="title">Medical consultation</h5>
+                <div class="content-hover">
+                  <h5>Home Visit</h5>
+                  <p>Lorem ipsum dolor sit amet consecte.Lorem ipsum dolor sit amet consecte.
+                  </p><a href="/"><img src="./assets/Send.png" /></a>
+                </div>
               </div>
             </div>
             <div class="col-lg-3">
-              <div class="card"><img src="./assets/about-4.png" />
-                <h5>Lab testing center</h5>
+              <div class="card"><img src="./assets/about-4.png" class="img-header" />
+                <h5 class="title">Lab testing center</h5>
+                <div class="content-hover">
+                  <h5>Home Visit</h5>
+                  <p>Lorem ipsum dolor sit amet consecte.Lorem ipsum dolor sit amet consecte.
+                  </p><a href="/"><img src="./assets/Send.png" /></a>
+                </div>
               </div>
             </div>
             <div class="col-lg-3">
-              <div class="card"><img src="./assets/about-2.png" />
-                <h5>Lab testing center</h5>
+              <div class="card"><img src="./assets/about-2.png" class="img-header" />
+                <h5 class="title">Lab testing center</h5>
+                <div class="content-hover">
+                  <h5>Home Visit</h5>
+                  <p>Lorem ipsum dolor sit amet consecte.Lorem ipsum dolor sit amet consecte.
+                  </p><a href="/"><img src="./assets/Send.png" /></a>
+                </div>
               </div>
             </div>
           </div>
@@ -264,7 +286,7 @@
                 <button class="tablinks" onclick="openCity(event, 'Children')">Children</button>
               </div>
             </div>
-            <div class="col-lg-3 text-right pt-3"><a href="#">All packages <img
+            <div class="col-lg-3 text-right pt-3"><a href="./Offer.html">All packages <img
                   src="./assets/arrow-right-black.svg" /></a>
             </div>
           </div>
