--- a/SingleService.html
+++ b/SingleService.html
@@ -170,7 +170,7 @@
                 <div class="content-hover">
                   <h5>Home Visit</h5>
                   <p>Lorem ipsum dolor sit amet consecte.Lorem ipsum dolor sit amet consecte.
-                  </p><a href="/"><img src="./assets/Send.png" /></a>
+                  </p><a href="/SingleService.html"><img src="./assets/Send.png" /></a>
                 </div>
               </div>
             </div>
@@ -180,7 +180,7 @@
                 <div class="content-hover">
                   <h5>Home Visit</h5>
                   <p>Lorem ipsum dolor sit amet consecte.Lorem ipsum dolor sit amet consecte.
-                  </p><a href="/"><img src="./assets/Send.png" /></a>
+                  </p><a href="/SingleService.html"><img src="./assets/Send.png" /></a>
                 </div>
               </div>
             </div>
@@ -190,7 +190,7 @@
                 <div class="content-hover">
                   <h5>Home Visit</h5>
                   <p>Lorem ipsum dolor sit amet consecte.Lorem ipsum dolor sit amet consecte.
-                  </p><a href="/"><img src="./assets/Send.png" /></a>
+                  </p><a href="/SingleService.html"><img src="./assets/Send.png" /></a>
                 </div>
               </div>
             </div>
@@ -200,7 +200,7 @@
                 <div class="content-hover">
                   <h5>Home Visit</h5>
                   <p>Lorem ipsum dolor sit amet consecte.Lorem ipsum dolor sit amet consecte.
-                  </p><a href="/"><img src="./assets/Send.png" /></a>
+                  </p><a href="/SingleService.html"><img src="./assets/Send.png" /></a>
                 </div>
               </div>
             </div>
