--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <div class="content-hover">
                   <h5>Home Visit</h5>
                   <p>Lorem ipsum dolor sit amet consecte.Lorem ipsum dolor sit amet consecte.
-                  </p><a href="/"><img src="./assets/Send.png" /></a>
+                  </p><a href="/SingleService.html"><img src="./assets/Send.png" /></a>
                 </div>
               </div>
             </div>
@@ -188,7 +188,7 @@
                 <div class="content-hover">
                   <h5>Home Visit</h5>
                   <p>Lorem ipsum dolor sit amet consecte.Lorem ipsum dolor sit amet consecte.
-                  </p><a href="/"><img src="./assets/Send.png" /></a>
+                  </p><a href="/SingleService.html"><img src="./assets/Send.png" /></a>
                 </div>
               </div>
             </div>
@@ -198,7 +198,7 @@
                 <div class="content-hover">
                   <h5>Home Visit</h5>
                   <p>Lorem ipsum dolor sit amet consecte.Lorem ipsum dolor sit amet consecte.
-                  </p><a href="/"><img src="./assets/Send.png" /></a>
+                  </p><a href="/SingleService.html"><img src="./assets/Send.png" /></a>
                 </div>
               </div>
             </div>
@@ -208,7 +208,7 @@
                 <div class="content-hover">
                   <h5>Home Visit</h5>
                   <p>Lorem ipsum dolor sit amet consecte.Lorem ipsum dolor sit amet consecte.
-                  </p><a href="/"><img src="./assets/Send.png" /></a>
+                  </p><a href="/SingleService.html"><img src="./assets/Send.png" /></a>
                 </div>
               </div>
             </div>
