--- a/Cart/cheack-out.html
+++ b/Cart/cheack-out.html
@@ -6,34 +6,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alfa</title>
-  <!-- <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico" /> -->
-  <link rel="shortcut icon" type="image/png" href="assets/alfaLogo.png" />
+  <!-- <link rel="shortcut icon" type="image/x-icon" href="../assets/favicon.ico" /> -->
+  <link rel="shortcut icon" type="image/png" href="../assets/alfaLogo.png" />
 
   <!-- Owl Carousel -->
 
-  <link rel="stylesheet" href="lib/OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="../lib/OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" crossorigin="anonymous"
     referrerpolicy="no-referrer"></script>
 
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="lib/fontawesome-free-5.15.4-web/css/fontawesome.min.css" />
-  <link rel="stylesheet" href="lib/fontawesome-free-5.15.4-web/css/fontawesome.min.css">
-  <link rel="stylesheet" href="lib/fontawesome-free-5.15.4-web/css/all.min.css" />
+  <link rel="stylesheet" href="../lib/fontawesome-free-5.15.4-web/css/fontawesome.min.css" />
+  <link rel="stylesheet" href="../lib/fontawesome-free-5.15.4-web/css/fontawesome.min.css">
+  <link rel="stylesheet" href="../lib/fontawesome-free-5.15.4-web/css/all.min.css" />
   <!-- bootstrap -->
-  <link rel="stylesheet" href="lib/bootstrap-5.2.3-dist/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="lib/bootstrap-5.2.3-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../lib/bootstrap-5.2.3-dist/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="../lib/bootstrap-5.2.3-dist/css/bootstrap.min.css">
   <!-- bootstrap icon -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
-  <link rel="stylesheet" href="lib/icons-1.10.5/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="../lib/icons-1.10.5/font/bootstrap-icons.css">
   <!-- fancyBox link  -->
-  <link rel="stylesheet" href="css/fancyBox.css" />
+  <link rel="stylesheet" href="../css/fancyBox.css" />
   <!-- aos link -->
-  <link rel="stylesheet" href="./css/aos.css" />
-  <link rel="stylesheet" href="css/slick.css" />
+  <link rel="stylesheet" href="../css/aos.css" />
+  <link rel="stylesheet" href="../css/slick.css" />
 
-  <link rel="stylesheet" href="css/slick-theme.css" />
-  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="../css/slick-theme.css" />
+  <link rel="stylesheet" href="../css/main.css" />
 </head>
 
 <body class="BookYourServices">
@@ -48,7 +48,7 @@
       <nav class="navbar navbar-expand-lg py-2">
         <div class="container">
           <a class="navbar-brand" href="index.html">
-            <img src="assets/alpha.svg" alt="Roya" />
+            <img src="../assets/alpha.svg" alt="Roya" />
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,8 +70,8 @@
                 <a class="nav-link" href="#Offers">News</a>
                 <a class="nav-link" href="#Offers">Contact us</a>
 
-                <button class="btn-main">Get your results <img src="./assets/ArrowRight.svg"></button>
-                <a href="#"><img src="./assets/sudia.svg">Ar</a>
+                <button class="btn-main">Get your results <img src="../assets/ArrowRight.svg"></button>
+                <a href="#"><img src="../assets/sudia.svg">Ar</a>
               </div>
             </div>
           </div>
@@ -84,14 +84,14 @@
           <div class="navbar-btns navbar-btns-icons navbar-btns-icons-authonticaTION d-flex align-items-center ">
             <a class="nav-link" href="#Partners">Partners</a>
             <a class="nav-link" href="services.html">Services</a>
-            <button class="btn-main">Get your results <img src="./assets/ArrowRight.svg"></button>
-            <a><img src="./assets/sudia.svg">Ar</a>
+            <button class="btn-main">Get your results <img src="../assets/ArrowRight.svg"></button>
+            <a><img src="../assets/sudia.svg">Ar</a>
           </div>
         </div>
       </nav>
 
       <div class="subNavbar">
-        <!-- <img src="./assets/Frame.png" class="backgroundImg" /> -->
+        <!-- <img src="../assets/Frame.png" class="backgroundImg" /> -->
         <div class="container">
           <div class="content">
             <ul class="Links">
@@ -106,8 +106,9 @@
               <li><a href="#Offers">Contact us</a></li>
             </ul>
             <ul class="activites">
-              <li><span class="shopping"><img src="./assets/shopping-cart.svg"><span class="number">2</span></span></li>
-              <li><span><img src="./assets/user.svg"></span></li>
+              <li><span class="shopping"><img src="../assets/shopping-cart.svg"><span class="number">2</span></span>
+              </li>
+              <li><span><img src="../assets/user.svg"></span></li>
             </ul>
           </div>
         </div>
@@ -116,12 +117,12 @@
       <div class="Deatiles">
         <div class="container">
           <div class="alert alert-secondary" role="alert">
-            <h5> Have an account ?</h5><button class="btn-main">Sign in<img src="./assets/ArrowRight.svg" /></button>
+            <h5> Have an account ?</h5><button class="btn-main">Sign in<img src="../assets/ArrowRight.svg" /></button>
           </div>
           <div class="PatientInfo mb-5">
             <div class="row">
               <div class="col-lg-12">
-                <h4>Check out</h4>
+                <h4 class="mb-3">Check out </h4>
               </div>
               <div class="col-lg-8">
                 <div class="alert alert-secondary" role="alert">
@@ -184,13 +185,13 @@
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="gridCheck">
                         <label class="form-check-label" for="gridCheck">
-                          Debit / credit card <img src="./assets/Card.png" class="Card">
+                          Debit / credit card <img src="../assets/Card.png" class="Card">
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="gridCheck">
                         <label class="form-check-label" for="gridCheck">
-                          cash <img src="./assets/cash.svg" class="Card-img">
+                          cash <img src="../assets/cash.svg" class="Card-img">
                         </label>
                       </div>
                     </div>
@@ -200,45 +201,48 @@
               </div>
               <div class="col-lg-4">
                 <div class="card">
+                  <div class="card-header">
+                    <div class="content">
+                      <h5>Your order </h5>
+                      <h5>Subtotal</h5>
+                    </div>
+                  </div>
                   <div class="row">
                     <div class="col-lg-12">
-                      <div class="content"><span>Your order </span><span>Subtotal</span></div>
+                      <div class="content"><span>Home visit</span><strong>290 SAR</strong></div>
                     </div>
                     <div class="col-lg-12">
-                      <div class="content"><span>Home visit</span><span>290 SAR</span></div>
+                      <div class="content"><span>Subtotal</span><strong>290 SAR</strong></div>
                     </div>
                     <div class="col-lg-12">
-                      <div class="content"><span>Subtotal</span><span>290 SAR</span></div>
+                      <div class="content"><span>Discount</span><strong>10%</strong></div>
                     </div>
                     <div class="col-lg-12">
-                      <div class="content"><span>Discount</span><span>10%</span></div>
+                      <div class="content"><span>Tax</span><strong>19 SAR</strong></div>
                     </div>
                     <div class="col-lg-12">
-                      <div class="content"><span>Tax</span><span>19 SAR</span></div>
-                    </div>
-                    <div class="col-lg-12">
-                      <div class="content"><span>Total</span><span>290 SAR</span></div>
+                      <div class="content"><span>Total</span><strong>290 SAR</strong></div>
                     </div>
                   </div>
                 </div>
-                <button class="btn-main">Confirm booking <img src="./assets/ArrowRight.svg" /></button>
+                <button class="btn-main" data-bs-toggle="modal" data-bs-target="#Confirming">Confirm booking <img
+                    src="../assets/ArrowRight.svg" /></button>
               </div>
             </div>
           </div>
         </div>
       </div>
       </div>
-
       <footer>
         <div class="container">
           <div class="row">
             <div class="col-lg-7">
               <div class="content">
                 <ul>
-                  <li><a><img src="./assets/alpha.svg"></a></li>
-                  <li class="soical"><a href="#"><img src="./assets/FacebookIcon.svg"></a></li>
-                  <li class="soical"><a href="#"><img src="./assets/Twitter.svg"></a></li>
-                  <li class="soical"><a href="#"><img src="./assets/YouTube.svg"></a></li>
+                  <li><a><img src="../assets/alpha.svg"></a></li>
+                  <li class="soical"><a href="#"><img src="../assets/FacebookIcon.svg"></a></li>
+                  <li class="soical"><a href="#"><img src="../assets/Twitter.svg"></a></li>
+                  <li class="soical"><a href="#"><img src="../assets/YouTube.svg"></a></li>
                 </ul>
               </div>
             </div>
@@ -248,31 +252,93 @@
           </div>
         </div>
       </footer>
-      <script src="./js/jquery.min.js"></script>
+    </section>
 
-      <!-- Bootstrap -->
-      <script type="text/javascript" src="./js/slick.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-      <script src="js/popper.js"></script>
-      <script src="lib/bootstrap-4.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Modal reservation-->
+    <div class="modal fade" id="reservation" tabindex="-1" aria-labelledby="reservation" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header ">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <h4 class="modal-title" id="exampleModalLabel">Please select reservation type</h>
+          </div>
+          <div class="modal-body">
+            <form>
+              <ul class="Reservation d-flex">
+                <li>
+                  <label for="Home">
+                    <img src="../assets/Home.svg" />
+                    <img src="../assets/Home-active.svg" class="active-img" /> Home
+                    <input type="radio" value="Home" id="Home" name="reservation"></label>
+                </li>
+                <li>
+                  <label for="Label" class="active"><img src="../assets/flask.svg" />
+                    <img src="../assets/label-active.svg" class="active-img" /> Label
+                    <input type="radio" value="Label" id="Label" name="reservation" checked></label>
+                </li>
+              </ul>
+              <button class="btn-main" data-bs-toggle="modal" data-bs-target="#Confirming"> Continue</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal Confirming-->
+    <div class="modal fade" id="Confirming" tabindex="-1" aria-labelledby="Confirming" aria-hidden="true">
+      <div class="modal-dialog ">
+        <div class="modal-content">
+          <div class="modal-header m-2 ">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body text-center">
+            <h4 class="modal-title" id="exampleModalLabel">Confirming your reservation .. please wait</h4>
+            <div class="lds-facebook">
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="../js/jquery.min.js"></script>
 
-      <script src="lib/bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap -->
+    <script type="text/javascript" src="./js/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+    <script src="../js/popper.js"></script>
+    <script src="../lib/bootstrap-4.0.0/dist/js/bootstrap.bundle.min.js"></script>
 
-      <!-- jquery -->
+    <script src="../lib/bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
 
-      <!-- fancyBox script -->
-      <script src="./js/fancybox.min.js"></script>
-      <!-- aos script -->
-      <script src="./js/aos.js"></script>
-      <!-- Font Awesome -->
-      <script src="./js/all.js"></script>
-      <!-- JS Coded -->
-      <script src="js/app.js"></script>
-      <script src="./js/animationSlick.js">// Get titles from the DOM
+    <!-- jquery -->
 
-      </script>
+    <!-- fancyBox script -->
+    <script src="../js/fancybox.min.js"></script>
+    <!-- aos script -->
+    <script src="../js/aos.js"></script>
+    <!-- Font Awesome -->
+    <script src="../js/all.js"></script>
+    <!-- JS Coded -->
+    <script src="../js/app.js"></script>
+    <script src="../js/animationSlick.js">// Get titles from the DOM
+
+    </script>
+    <script>
+      $(function () {
+        $('#Home').on('change', function (e) {
+          el = $(e.target);
+          el.parents('label').addClass('active');
+          $('#Label').parents('label').removeClass('active');
+        });
+        $('#Label').on('change', function (e) {
+          el = $(e.target);
+          el.parents('label').addClass('active');
+          $('#Home').parents('label').removeClass('active');
+        });
+      });</script>
 
 </body>
 
