profile and some edit for navigation

--- a/Test.html
+++ b/Test.html
@@ -60,15 +60,15 @@
               <div class="navbar-btns">
                 <a class="nav-link" href="#Partners">Partners</a>
                 <a class="nav-link" href="services.html">Services</a>
-                <a class="nav-link active" href="#Offers">Offers</a>
-                <a class="nav-link" href="#Offers">About</a>
-                <a class="nav-link" href="#Offers">Services</a>
-                <a class="nav-link" href="#Offers">Tests</a>
-                <a class="nav-link" href="#Offers">Packages</a>
-                <a class="nav-link" href="#Offers">Branches</a>
-                <a class="nav-link" href="#Offers">Medical Atricles</a>
-                <a class="nav-link" href="#Offers">News</a>
-                <a class="nav-link" href="#Offers">Contact us</a>
+                <a class="nav-link" href="/Offer.html">Offers</a>
+                <a class="nav-link" href="/About.html">About</a>
+                <a class="nav-link" href="/Services.html">Services</a>
+                <a class="nav-link" href="/Test.html">Tests</a>
+                <a class="nav-link" href="/Packages.html">Packages</a>
+                <a class="nav-link" href="/Branches/Branches.html">Branches</a>
+                <a class="nav-link" href="/Branches/Medical-articles.html">Medical Atricles</a>
+                <a class="nav-link" href="/Branches/News.html">News</a>
+                <a class="nav-link" href="/Branches/CountactUs.html">Contact us</a>
 
                 <button class="btn-main">Get your results <img src="./assets/ArrowRight.svg"></button>
                 <a href="#"><img src="./assets/sudia.svg">Ar</a>
@@ -95,19 +95,19 @@
         <div class="container">
           <div class="content">
             <ul class="Links">
-              <li class="active"><a href="#Offers">Offers</a></li>
-              <li><a href="#Offers">About</a></li>
+              <li class="active"><a href="/Offer.html">Offers</a></li>
+              <li><a href="/About.html">About</a></li>
               <li><a href="./Services.html">Services</a></li>
-              <li><a href="#Offers">Tests</a></li>
-              <li><a href="#Offers">Packages</a></li>
-              <li><a href="#Offers">Branches</a></li>
-              <li><a href="#Offers">Medical Atricles</a></li>
-              <li><a href="#Offers">News</a></li>
-              <li><a href="#Offers">Contact us</a></li>
+              <li><a href="/Test.html">Tests</a></li>
+              <li><a href="/Packages.html">Packages</a></li>
+              <li><a href="/Branches/Branches.html">Branches</a></li>
+              <li><a href="/Branches/Medical-articles.html">Medical Atricles</a></li>
+              <li><a href="/Branches/News.html">News</a></li>
+              <li><a href="/Branches/CountactUs.html">Contact us</a></li>
             </ul>
             <ul class="activites">
               <li><span class="shopping"><img src="./assets/shopping-cart.svg"><span class="number">2</span></span></li>
-              <li><span><img src="./assets/user.svg"></span></li>
+              <li><a href="/profile-myaccount.html"><img src="./assets/user.svg"></a></li>
             </ul>
           </div>
         </div>
