--- a/singlePackage.html
+++ b/singlePackage.html
@@ -95,15 +95,15 @@
           <div class="container">
             <div class="content">
               <ul class="Links">
-                <li><a href="./Offer.html">Offers</a></li>
-                <li><a href="#Offers">About</a></li>
-                <li class="active"><a href="#">Services</a></li>
-                <li><a href="#">Tests</a></li>
-                <li><a href="#Offers">Packages</a></li>
-                <li><a href="#Offers">Branches</a></li>
-                <li><a href="#Offers">Medical Atricles</a></li>
-                <li><a href="#Offers">News</a></li>
-                <li><a href="#Offers">Contact us</a></li>
+                <li class="active"><a href="/Offer.html">Offers</a></li>
+                <li><a href="/About.html">About</a></li>
+                <li><a href="./Services.html">Services</a></li>
+                <li><a href="/Test.html">Tests</a></li>
+                <li><a href="/Packages.html">Packages</a></li>
+                <li><a href="/Branches/Branches.html">Branches</a></li>
+                <li><a href="/Branches/Medical-articles.html">Medical Atricles</a></li>
+                <li><a href="/Branches/News.html">News</a></li>
+                <li><a href="/Branches/CountactUs.html">Contact us</a></li>
               </ul>
               <ul class="activites">
                 <li><span class="shopping"><img src="./assets/shopping-cart.svg"><span class="number">2</span></span>
