--- a/profile-Results.html
+++ b/profile-Results.html
@@ -146,21 +146,21 @@
 
                                 </div>
                                 <h3>Amira Mahmoud</h3>
-                                <div class="giftContainer">
-                                    <img src="assets/GiftIcon.svg" />
-                                    <span style="font-size: 20px;">
-                                        You have
-                                    </span>
-                                    <span
-                                        style="background-color:#DF0024 ; padding: 8px 20px; border-radius: 6px; color: white; font-size: 24px;">
-                                        2000
-                                    </span>
-                                    <span style="font-size: 20px;">
-                                        points
-                                    </span>
-                                    <a style="font-size: 20px;">
-                                        Read more <img src="assets/ArrowRight.svg" />
-                                    </a>
+                                <div class="ProfileNavbar">
+                                    <ul>
+                                        <li><a href="#"> <img src="assets/userOutline.svg" />My
+                                                Account</a></li>
+                                        <li ><a href="profile-Addresses.html"> <img src="assets/locationOutline.svg" />
+                                                Addresses</a></li>
+                                        <li  ><a href="profile-Booking.html"> <img src="assets/calendarOutline.svg" />
+                                                Booking</a></li>
+                                        <li class="active"><a href="profile-Results.html"> <img src="assets/documentOutline.svg" />
+                                                Results</a></li>
+                                        <li><a href="profile-points.html"> <img src="assets/giftOutline.svg" />
+                                                Points</a></li>
+
+
+                                    </ul>
                                 </div>
                                 <a class="logout-btn">
                                     <img src="assets/logoutRed.svg" /> log out
@@ -169,23 +169,7 @@
                         </div>
                         <div class="col-lg-8">
                             <div class="ProfieContainer">
-                                <div class="ProfileNavbar">
-                                    <ul>
-                                        <li><a href="profile-myaccount.html"> <img src="assets/userOutline.svg" />My
-                                                Account</a></li>
-                                        <li><a href="profile-Addresses.html"> <img src="assets/locationOutline.svg" />
-                                                Addresses</a></li>
-                                        <li class="active"><a href="profile-Booking.html"> <img
-                                                    src="assets/calendarFilled.svg" />
-                                                Booking</a></li>
-                                        <li><a href="profile-Results.html"> <img src="assets/documentOutline.svg" />
-                                                Results</a></li>
-                                        <li><a href="profile-points.html"> <img src="assets/giftOutline.svg" />
-                                                Points</a></li>
-
-
-                                    </ul>
-                                </div>
+                             
                                 <div class="Addresses d-flex flex-column">
                                     <div class="row"
                                         style=" background-color: #F2F3F4; padding: 10px;border-radius: 4px;">
