--- a/profile-Addresses.html
+++ b/profile-Addresses.html
@@ -146,35 +146,12 @@
 
                                 </div>
                                 <h3>Amira Mahmoud</h3>
-                                <div class="giftContainer">
-                                    <img src="assets/GiftIcon.svg" />
-                                    <span style="font-size: 20px;">
-                                        You have
-                                    </span>
-                                    <span
-                                        style="background-color:#DF0024 ; padding: 8px 20px; border-radius: 6px; color: white; font-size: 24px;">
-                                        2000
-                                    </span>
-                                    <span style="font-size: 20px;">
-                                        points
-                                    </span>
-                                    <a style="font-size: 20px;">
-                                        Read more <img src="assets/ArrowRight.svg" />
-                                    </a>
-                                </div>
-                                <a class="logout-btn">
-                                    <img src="assets/logoutRed.svg" /> log out
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8">
-                            <div class="ProfieContainer">
                                 <div class="ProfileNavbar">
                                     <ul>
                                         <li><a href="#"> <img src="assets/userOutline.svg" />My
                                                 Account</a></li>
-                                        <li class="active"><a href="profile-Addresses.html"> <img
-                                                    src="assets/locationFilled.png" /> Addresses</a></li>
+                                        <li  class="active"><a href="profile-Addresses.html"> <img src="assets/locationOutline.svg" />
+                                                Addresses</a></li>
                                         <li><a href="profile-Addresses.html"> <img src="assets/calendarOutline.svg" />
                                                 Booking</a></li>
                                         <li><a href="profile-Results.html"> <img src="assets/documentOutline.svg" />
@@ -185,6 +162,14 @@
 
                                     </ul>
                                 </div>
+                                <a class="logout-btn">
+                                    <img src="assets/logoutRed.svg" /> log out
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8">
+                            <div class="ProfieContainer">
+                            
                                 <div class="Addresses d-flex flex-column">
                                     <div class="SingleAddress">
                                         <div>
